# Linkglys

./: .coverage  .env.example  .gitignore  .openclaude-profile.json  .replit  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_AUDIT.md  OMEGA_CTOS_VISUALIZATION.txt  README.md  README_SIMPLE.md  TESTING.md  TROUBLESHOOTING.md  autonomous_self_evolution_upgrades_report.py  bioinformatics_ck_contracts.json  ck_data_quality_assessment.py  ck_data_quality_assessment_schema.json  ck_feature_engineering_automation.py  ck_feature_engineering_automation_schema.json  ck_ml_automated_pipeline.py  cybersecurity_ck_registry.json  docker-compose.yml  fix_simple.py  index.js  integrated_mas.py  lrs  main.py  malware_signature_analyzer_ck.py  multi_layered_multi_agent_system.py  network_anomaly_detector_ck.py  neuralblitz-presentation.md  neuralblitz_federated_pysyft.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  quadratic_voting_ck.py  raft_consensus.py  (+12 more)
.github/: dependabot.yml
.infsh/: infsh
CapabilityKernels/: README.md
Governance/: README.md
_quarantine/: edge_computing_raspberry_pi_raspberry_pi_inference.py  lrs_agents_integration-bridge_src_opencode_lrs_bridge_utils_advanced_security.py  lrs_agents_integration-bridge_src_opencode_lrs_bridge_utils_analytics.py  lrs_agents_lrs_benchmarking_regression_testing_framework.py  neuralblitz-v50_Advanced-Research_Advanced-Research_Ideas_Claude_MCI_advanced-examples.py  neuralblitz-v50_Advanced-Research_Advanced-Research_Ideas_Claude_MCI_injector.py  neuralblitz-v50_Emergent-Prompt-Architecture_Emergent-Prompt-Architecture_CORE_ASSEMBLER.py  neuralblitz-v50_Emergent-Prompt-Architecture_Emergent-Prompt-Architecture_OMEGA_GUARD_IMPL.py  neuralblitz-v50_neuralblitz_enterprise_autocognition_engine.py  neuralblitz-v50_neuralblitz_ml_classifier.py  neuralblitz-v50_neuralblitz_ml_predictor.py  neuralblitz-v50_python_neuralblitz_cognitive_engine.py  neuralblitz-v50_quantum_foundation.py
attached_assets/: Pasted-Nvidia-nvapi-KlycdICuzlnyMziO3s-xdOKVpw69n7HXdfDkcXFWTo_1775557223855.txt
c/: CMakeLists.txt  Makefile  README.md
c/include/neuralblitz/: agent.h  api.h  cognitive.h  free_energy.h  intent.h  lens.h  multi_agent.h  plugin.h  precision.h  registry.h  types.h
c/src/: agent.c  api.c  cognitive.c  free_energy.c  intent.c  lens.c  multi_agent.c  plugin.c  precision.c  registry.c
c/tests/: test_neuralblitz.c
demo_cache/: cache_index.json
docs/: Automated_Charter_Enforcement_Report.md  BIOINFORMATICS_CK_REPORT.md  BLOCKCHAIN_IMPLEMENTATION_REPORT.md  (+31 more)
neuralblitz-v50/Advanced-Research/Advanced-Research/: CODE_OF_CONDUCT.md  Makefile  README_GO.md  RESEARCH_ROADMAP.md  go.mod  pyproject.toml  requirements.txt
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/: acca.md  amfcdais.md  anas.md  apa.md  apha.md  gaa.md  gabb.md  gaff.me  gafffa.md  grant.md  ne.md  phd.md  qinta.md  rman.md  sde.md
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/Claude/: Adaptive-Meta-Learning-Architectures.md  CNM.md  HNMA.md  NewNN.md
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/Claude-Gemini-Interact/: chat.md
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/Claude/Haiku4.5/: HGAMR.md
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/Claude/MCI/: README.md  README2.md  advanced-examples.py  injector.py
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/Claude/Sonnet4.5/: HTTPDB.md
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/Gemini/Gem3-Pro/: TEC2.md  TEMP.md
neuralblitz-v50/Advanced-Research/Advanced-Research/Ideas/Qwen/Qwen3-235B-A22B-Instruct-2507/: GAmL.md  Modern.md  NeuroSheaf.md  Oqnf.md  Tensor.md  agar.md  atclf.md  caaml.md  gamlll.md  iasf.md  metasythnai.md  riemannai.md  selmfa.md  tcgf.md
neuralblitz-v50/Advanced-Research/Advanced-Research/cmd/bridge/: main.go
neuralblitz-v50/Advanced-Research/Advanced-Research/cmd/cli/: main.go
neuralblitz-v50/Advanced-Research/Advanced-Research/configs/: default.yaml
neuralblitz-v50/Advanced-Research/Advanced-Research/docs/: API_REFERENCE.md  BIDIRECTIONAL_API_COMMUNICATION.md  EXAMPLES.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  UNDERSTANDING_THE_SYSTEM.md
neuralblitz-v50/Advanced-Research/Advanced-Research/phd/: new4.md  new5.md  new6.md  new7.md
neuralblitz-v50/Advanced-Research/Advanced-Research/phd/meta/doctorial/: new.md  new1.md  new2.md
neuralblitz-v50/Advanced-Research/Advanced-Research/pkg/core/: bridge.go  context.go  eventbus.go  integration_test.go  lrs_adapter.go  neuralblitz_adapter.go  opencode_adapter.go  orchestrator.go  orchestrator_test.go  workflow_engine.go
neuralblitz-v50/Advanced-Research/Advanced-Research/pkg/lrs/: client.go
neuralblitz-v50/Advanced-Research/Advanced-Research/pkg/neuralblitz/: engine.go  layers.go
neuralblitz-v50/Advanced-Research/Advanced-Research/pkg/opencode/: client.go  types.go
neuralblitz-v50/Advanced-Research/Advanced-Research/pkg/pipeline/: automated.go
neuralblitz-v50/Advanced-Research/Advanced-Research/pkg/unified/: system.go
neuralblitz-v50/Advanced-Research/Advanced-Research/src/advanced_research/: __init__.py  cli.py
neuralblitz-v50/Advanced-Research/Advanced-Research/src/advanced_research/core/: context.py  integrations.py  lrs_context.py
neuralblitz-v50/Advanced-Research/Advanced-Research/src/advanced_research/neuralblitz/: geometric.py
neuralblitz-v50/Advanced-Research/Advanced-Research/src/advanced_research/pipeline/: automated.py
neuralblitz-v50/Advanced-Research/Advanced-Research/src/advanced_research/unified/: api.py
neuralblitz-v50/Advanced-Research/Advanced-Research/src/advanced_research/workflow/: research.py
neuralblitz-v50/cpp/: CMakeLists.txt  neuralblitz
neuralblitz-v50/cpp/include/neuralblitz/: agent.hpp  cognitive_engine.h  combined.hpp  core.hpp  distributed.hpp  extended.hpp  golden_dag.h  governance.hpp  neuralblitz_core.h  stage.hpp  task.hpp
neuralblitz-v50/cpp/src/: README.md  main.cpp  neuralblitz_core.cpp  neuralblitz_core.h
(+832 files in other folders)
