[project]
name = "neuralblitz"
version = "1.0.0"
description = "NeuralBlitz Cognitive AI Hub - OpenCode & LRS-Agents Integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "PyJWT>=2.0.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "aiofiles>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
